Table Customer {
  id int [pk, increment]
  name varchar
  email varchar
  phone varchar
  address varchar
}

Table Order {
  id int [pk, increment]
  customer_id int [ref: > Customer.id]
  status varchar [note: 'pending, success, canceled']
  total decimal
}

Table Product {
  id int [pk, increment]
  name varchar
  description text
  price decimal
  stock int
  category varchar
  created_at datetime
  updated_at datetime
}

Table Order_Item {
  id int [pk, increment]
  product_id int [ref: > Product.id]
  order_id int [ref: > Order.id]
  quantity int
}

Table Logistics {
  id int [pk, increment]
  order_id int [ref: - Order.id]
  delivery varchar
  status varchar [note: 'pending, in_transit, delivered, canceled']
  estimated_date datetime
  delivery_date datetime
}
